--- a/ViewConnect/app/src/main/res/values/strings.xml
+++ b/ViewConnect/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="good_morning">Good morning!</string>
     <string name="search">Search for celebrants...</string>
     <string name="upcoming_birthdays">Upcoming birthdays</string>
+    <string name="home">Home</string>
+    <string name="people">People</string>
+    <string name="gifts">Gifts</string>
+    <string name="mode">Mode</string>
+    <string name="textview">TextView</string>
 </resources>
